feat: enhance product detail handling and update related DTOs and services