@@ -1,28 +1,17 @@
 package com.dev.backend.mapper;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
-
+import com.dev.backend.dto.product.*;
+import com.dev.backend.entity.*;
 import org.springframework.stereotype.Component;
 
-import com.dev.backend.dto.product.ProductAuthorResponse;
-import com.dev.backend.dto.product.ProductDetailResponse;
-import com.dev.backend.dto.product.ProductGenreResponse;
-import com.dev.backend.dto.product.ProductImageResponse;
-import com.dev.backend.dto.product.ProductResponse;
-import com.dev.backend.entity.Image;
-import com.dev.backend.entity.Product;
-import com.dev.backend.entity.ProductAuthor;
-import com.dev.backend.entity.ProductGenre;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class ProductMapper {
 
     public ProductResponse toDTO(Product product) {
-        if (product == null) {
-            return null;
-        }
+        if (product == null) return null;
 
         ProductResponse dto = new ProductResponse();
         dto.setId(product.getId());
@@ -33,37 +22,26 @@ public class ProductMapper {
         dto.setPrice(product.getPrice());
         dto.setQuantity(product.getQuantity());
         dto.setWeight(product.getWeight());
-
-        // Tránh NullPointerException nếu publishYear bị null
-        dto.setPublishYear(product.getPublishYear() != null ? product.getPublishYear().toString() : null);
         dto.setPages(product.getPages());
 
-        // Map thông tin Publisher và Series (Kiểm tra null an toàn)
-        if (product.getPublisher() != null) {
-            dto.setPublisherName(product.getPublisher().getName());
-            dto.setPublisherId(product.getPublisher().getId());
-        }
-        if (product.getSeries() != null) {
-            dto.setSeriesName(product.getSeries().getName());
-            dto.setSeriesId(product.getSeries().getId());
-        }
-        dto.setStatus(product.getStatus().name());
 
-        dto.setDescription(product.getDescription());
-        // Map các danh sách liên quan thay vì để null
-        dto.setProductAuthors(productAuthorResponse(product.getProductAuthors()));
-        dto.setProductGenres(productGenreResponse(product.getProductGenres()));
-        dto.setAuthorIds(setProductAuthorsId(product.getProductAuthors()));
-        dto.setGenreIds(setProductGenresId(product.getProductGenres()));
+        dto.setPublishYear(product.getPublishYear() != null ? product.getPublishYear().toString() : null);
+        dto.setStatus(product.getStatus() != null ? product.getStatus().name() : null);
+
+        dto.setPublisherName(product.getPublisher() != null ? product.getPublisher().getName() : null);
+        dto.setSeriesName(product.getSeries() != null ? product.getSeries().getName() : null);
+
+        // Fixed: Maps to List<String> as required by ProductResponse
+        dto.setAuthorsName(mapAuthorsToNames(product.getProductAuthors()));
+        dto.setGenresName(mapGenresToNames(product.getProductGenres()));
         dto.setUrlImageDefault(urlImageDefault(product.getImages()));
-        dto.setCoverImages(coverImageResponses(product.getImages()));
+
         return dto;
     }
 
     public ProductDetailResponse toDetail(Product product) {
-        if (product == null) {
-            return null;
-        }
+        if (product == null) return null;
+
         ProductDetailResponse dto = new ProductDetailResponse();
         dto.setId(product.getId());
         dto.setName(product.getName());
@@ -73,110 +51,76 @@ public class ProductMapper {
         dto.setPrice(product.getPrice());
         dto.setQuantity(product.getQuantity());
         dto.setWeight(product.getWeight());
-
-        // Tránh NullPointerException nếu publishYear bị null
         dto.setPublishYear(product.getPublishYear() != null ? product.getPublishYear().toString() : null);
         dto.setPages(product.getPages());
-
-        dto.setPublisherId(
-                product.getPublisher() != null
-                        ? product.getPublisher().getId()
-                        : null);
-
-        dto.setSeriesId(
-                product.getSeries() != null
-                        ? product.getSeries().getId()
-                        : null);
-        dto.setStatus(product.getStatus().name());
-
+        dto.setPublisherId(product.getPublisher() != null ? product.getPublisher().getId() : null);
+        dto.setSeriesId(product.getSeries() != null ? product.getSeries().getId() : null);
+        
+        // Fixed: Null-safe status mapping
+        dto.setStatus(product.getStatus() != null ? product.getStatus().name() : null);
         dto.setDescription(product.getDescription());
 
-        dto.setAuthorIds(setProductAuthorsId(product.getProductAuthors()));
-        dto.setGenreIds(setProductGenresId(product.getProductGenres()));
+        dto.setAuthorIds(mapAuthorsToIds(product.getProductAuthors()));
+        dto.setGenreIds(mapGenresToIds(product.getProductGenres()));
         dto.setCoverImages(coverImageResponses(product.getImages()));
+        
         return dto;
-
     }
 
-    private List<Integer> setProductAuthorsId(List<ProductAuthor> productAuthors) {
-        if (productAuthors == null || productAuthors.isEmpty()) {
-            return List.of();
-        }
+    // Helper: Map Authors to Names
+    private List<String> mapAuthorsToNames(List<ProductAuthor> list) {
+        if (list == null) return List.of();
+        return list.stream()
+                .filter(pa -> pa.getAuthor() != null)
+                .map(pa -> pa.getAuthor().getName())
+                .collect(Collectors.toList());
+    }
 
-        return productAuthors.stream()
-                .filter(pa -> pa != null && pa.getAuthor() != null)
+    // Helper: Map Genres to Names
+    private List<String> mapGenresToNames(List<ProductGenre> list) {
+        if (list == null) return List.of();
+        return list.stream()
+                .filter(pg -> pg.getGenre() != null)
+                .map(pg -> pg.getGenre().getName())
+                .collect(Collectors.toList());
+    }
+
+    // Helper: Map Authors to IDs
+    private List<Integer> mapAuthorsToIds(List<ProductAuthor> list) {
+        if (list == null) return List.of();
+        return list.stream()
+                .filter(pa -> pa.getAuthor() != null)
                 .map(pa -> pa.getAuthor().getId())
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    private List<Integer> setProductGenresId(List<ProductGenre> productGenres) {
-        if (productGenres == null || productGenres.isEmpty()) {
-            return List.of();
-        }
-
-        return productGenres.stream()
-                .filter(pa -> pa != null && pa.getGenre() != null)
-                .map(pa -> pa.getGenre().getId())
-                .toList();
-    }
-
-    private List<ProductAuthorResponse> productAuthorResponse(List<ProductAuthor> productAuthors) {
-        if (productAuthors == null || productAuthors.isEmpty()) {
-            return new ArrayList<>();
-        }
-
-        return productAuthors.stream().map(pa -> {
-            ProductAuthorResponse res = new ProductAuthorResponse();
-            if (pa.getAuthor() != null) {
-                res.setId(pa.getAuthor().getId());
-                res.setName(pa.getAuthor().getName());
-            }
-            return res;
-        }).collect(Collectors.toList());
-    }
-
-    private List<ProductGenreResponse> productGenreResponse(List<ProductGenre> productGenres) {
-        if (productGenres == null || productGenres.isEmpty()) {
-            return new ArrayList<>();
-        }
-
-        return productGenres.stream().map(pg -> {
-            ProductGenreResponse res = new ProductGenreResponse();
-            if (pg.getGenre() != null) {
-                res.setId(pg.getGenre().getId());
-                res.setName(pg.getGenre().getName());
-            }
-            return res;
-        }).collect(Collectors.toList());
+    // Helper: Map Genres to IDs
+    private List<Integer> mapGenresToIds(List<ProductGenre> list) {
+        if (list == null) return List.of();
+        return list.stream()
+                .filter(pg -> pg.getGenre() != null)
+                .map(pg -> pg.getGenre().getId())
+                .collect(Collectors.toList());
     }
 
     private String urlImageDefault(List<Image> images) {
-        if (images == null || images.isEmpty()) {
-            return "";
-        }
-
+        if (images == null || images.isEmpty()) return "";
         return images.stream()
                 .filter(img -> img != null && img.isThumbnail())
                 .map(img -> img.getUrlImage())
                 .findFirst()
-                .orElseGet(() -> images.get(0) != null ? images.get(0).getUrlImage() : "");
-
+                .orElse(images.get(0) != null ? images.get(0).getUrlImage() : "");
     }
 
     private List<ProductImageResponse> coverImageResponses(List<Image> images) {
-        if (images == null || images.isEmpty()) {
-            return null;
-        }
-
+        if (images == null || images.isEmpty()) return List.of();
         return images.stream()
+                .filter(img -> img != null)
                 .map(img -> {
-                    ProductImageResponse productImageResponse = new ProductImageResponse();
-                    if (productImageResponse != null) {
-                        productImageResponse.setUrl(img.getUrlImage());
-                        productImageResponse.setIsThumbnail(img.isThumbnail());
-                    }
-                    return productImageResponse;
+                    ProductImageResponse res = new ProductImageResponse();
+                    res.setUrl(img.getUrlImage());
+                    res.setIsThumbnail(img.isThumbnail());
+                    return res;
                 }).collect(Collectors.toList());
-
     }
 }
